--- a/php-cms/admin/styles.css
+++ b/php-cms/admin/styles.css
@@ -105,3 +105,15 @@ input[type=submit] {
 #dashboard i {
   margin-bottom: 5px;
 }
+
+.container{
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-evenly;
+  align-items: stretch;
+  gap: 3px;
+}
+
+.items{
+  flex: 1 0 auto;
+}
